--- a/index.html
+++ b/index.html
@@ -20,5 +20,17 @@
         </div>
     </header>
     <!-- /header -->
+    <!-- main -->
+    <main>
+        <div class="container">
+        <!-- bottons -->
+        <div class= "buttons">
+            <input type="submit" value="Add Task" class="first-one">
+            <input type="submit" value="Add Section" class="second-one">
+        </div>
+        <!-- /bottons -->
+    </div>
+    </main>
+    <!-- /main -->
 </body>
 </html>
