completato new-task

--- a/index.html
+++ b/index.html
@@ -23,13 +23,27 @@
     <!-- main -->
     <main>
         <div class="container">
-        <!-- bottons -->
-        <div class= "buttons">
+         <!-- buttons -->
+         <div class= "buttons">
             <input type="submit" value="Add Task" class="first-one">
             <input type="submit" value="Add Section" class="second-one">
+         </div>
         </div>
-        <!-- /bottons -->
-    </div>
+         <!-- /buttons -->
+        <!-- new task -->
+        <div class= "main-content">
+         <section id="new-task" class="content">
+            <h2><span class="downarrow">&#9660;</span>New Task</h2>
+                <ul>
+                    <li><span class= "check">&#10004;</span>Quarterly newsletter</li>
+                </ul>
+        </section>
+        <!-- /new task -->
+        <!-- today -->
+        <!-- /today -->
+        <!-- upcoming -->
+        <!-- /upcoming -->
+        </div>
     </main>
     <!-- /main -->
 </body>
