--- a/index.html
+++ b/index.html
@@ -35,11 +35,21 @@
          <section id="new-task" class="content">
             <h2><span class="downarrow">&#9660;</span>New Task</h2>
                 <ul>
-                    <li><span class= "check">&#10004;</span>Quarterly newsletter</li>
+                    <li><span class= "check">&#10004;</span>Quarterly newsletter <span class="special-note1">Editorial</span></li>
                 </ul>
         </section>
         <!-- /new task -->
         <!-- today -->
+        <section id="today" class="content">
+            <h2><span class="downarrow">&#9660;</span>Today</h2>
+                <ul>
+                    <li><span class= "check">&#10004;</span>Recruiting Blog post <span class="special-note1">Editorial</span></li>
+                    <li><span class= "check">&#10004;</span>Mobile app lounch <span class="special-note2">Q1 Goals</span></li>
+                    <li><span class= "cross">&#10006;</span>Interview John H. <span class="special-note3">Recruiting</span></li>
+                    <li><span class= "check">&#10004;</span>Submit update to mobile Storefronts <span class="special-note4">Mobile</span></li>
+
+                </ul>
+        </section>
         <!-- /today -->
         <!-- upcoming -->
         <!-- /upcoming -->
