--- a/index.html
+++ b/index.html
@@ -47,11 +47,19 @@
                     <li><span class= "check">&#10004;</span>Mobile app lounch <span class="special-note2">Q1 Goals</span></li>
                     <li><span class= "cross">&#10006;</span>Interview John H. <span class="special-note3">Recruiting</span></li>
                     <li><span class= "check">&#10004;</span>Submit update to mobile Storefronts <span class="special-note4">Mobile</span></li>
-
                 </ul>
         </section>
         <!-- /today -->
         <!-- upcoming -->
+        <section id="today" class="content">
+            <h2><span class="downarrow">&#9660;</span>Upcoming</h2>
+                <ul>
+                    <li><span class= "cross">&#10006;</span>Schedule meeting with Alex</li>
+                    <li><span class= "check">&#10004;</span>Homepage refresh <span class="special-note5">website</span></li>
+                    <li><span class= "check">&#10004;</span>Onboard new Sales team members <span class="special-note6">Sales</span></li>
+                    <li><span class= "check">&#10004;</span>Review Editorial Calendar <span class="special-note1">Editorial</span></li>
+                </ul>
+        </section>
         <!-- /upcoming -->
         </div>
     </main>
