--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
          <!-- /buttons -->
         <!-- new task -->
-        <div class= "main-content">
+        <div class= "background-content">
          <section id="new-task" class="content">
             <h2><span class="downarrow">&#9660;</span>New Task</h2>
                 <ul>
