--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
          <!-- /buttons -->
         <!-- new task -->
         <div class= "background-content">
-         <section id="new-task" class="content">
-            <h2><span class="downarrow">&#9660;</span>New Task</h2>
-                <ul>
-                    <li><span class= "check">&#10004;</span>Quarterly newsletter <span class="special-note1">Editorial</span></li>
-                </ul>
-        </section>
-        <!-- /new task -->
-        <!-- today -->
-        <section id="today" class="content">
+            <section class="content">
+                <h2><span class="downarrow">&#9660;</span>New Task</h2>
+                    <ul>
+                        <li><span class= "check">&#10004;</span>Quarterly newsletter <span class="special-note1">Editorial</span></li>
+                    </ul>
+            </section>
+            <!-- /new task -->
+            <!-- today -->
+            <section class="content">
             <h2><span class="downarrow">&#9660;</span>Today</h2>
                 <ul>
                     <li><span class= "check">&#10004;</span>Recruiting Blog post <span class="special-note1">Editorial</span></li>
@@ -48,18 +48,18 @@
                     <li><span class= "cross">&#10006;</span>Interview John H. <span class="special-note3">Recruiting</span></li>
                     <li><span class= "check">&#10004;</span>Submit update to mobile Storefronts <span class="special-note4">Mobile</span></li>
                 </ul>
-        </section>
-        <!-- /today -->
-        <!-- upcoming -->
-        <section id="today" class="content">
-            <h2><span class="downarrow">&#9660;</span>Upcoming</h2>
-                <ul>
-                    <li><span class= "cross">&#10006;</span>Schedule meeting with Alex</li>
-                    <li><span class= "check">&#10004;</span>Homepage refresh <span class="special-note5">website</span></li>
-                    <li><span class= "check">&#10004;</span>Onboard new Sales team members <span class="special-note6">Sales</span></li>
-                    <li><span class= "check">&#10004;</span>Review Editorial Calendar <span class="special-note1">Editorial</span></li>
-                </ul>
-        </section>
+            </section>
+            <!-- /today -->
+            <!-- upcoming -->
+            <section class="content">
+                <h2><span class="downarrow">&#9660;</span>Upcoming</h2>
+                    <ul>
+                        <li><span class= "cross">&#10006;</span>Schedule meeting with Alex</li>
+                        <li><span class= "check">&#10004;</span>Homepage refresh <span class="special-note5">website</span></li>
+                        <li><span class= "check">&#10004;</span>Onboard new Sales team members <span class="special-note6">Sales</span></li>
+                        <li><span class= "check">&#10004;</span>Review Editorial Calendar <span class="special-note1">Editorial</span></li>
+                    </ul>
+            </section>
         <!-- /upcoming -->
         </div>
     </main>
