modifiche post correzioni

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="container">
          <!-- buttons -->
          <div class= "buttons">
-            <input type="submit" value="Add Task" class="first-one">
-            <input type="submit" value="Add Section" class="second-one">
+            <input type="submit" value="Add Task" class="input first-one">
+            <input type="submit" value="Add Section" class="input second-one">
          </div>
         </div>
          <!-- /buttons -->
@@ -35,7 +35,7 @@
             <section class="content">
                 <h2><span class="downarrow">&#9660;</span>New Task</h2>
                     <ul>
-                        <li><span class= "check">&#10004;</span>Quarterly newsletter <span class="special-note1">Editorial</span></li>
+                        <li><span class= "circle check">&#10004;</span>Quarterly newsletter <span class="special note1">Editorial</span></li>
                     </ul>
             </section>
             <!-- /new task -->
@@ -43,10 +43,10 @@
             <section class="content">
             <h2><span class="downarrow">&#9660;</span>Today</h2>
                 <ul>
-                    <li><span class= "check">&#10004;</span>Recruiting Blog post <span class="special-note1">Editorial</span></li>
-                    <li><span class= "check">&#10004;</span>Mobile app lounch <span class="special-note2">Q1 Goals</span></li>
-                    <li><span class= "cross">&#10006;</span>Interview John H. <span class="special-note3">Recruiting</span></li>
-                    <li><span class= "check">&#10004;</span>Submit update to mobile Storefronts <span class="special-note4">Mobile</span></li>
+                    <li><span class= "circle check">&#10004;</span>Recruiting Blog post <span class="special note1">Editorial</span></li>
+                    <li><span class= "circle check">&#10004;</span>Mobile app lounch <span class="special note2">Q1 Goals</span></li>
+                    <li><span class= "circle cross">&#10006;</span>Interview John H. <span class="special note3">Recruiting</span></li>
+                    <li><span class= "circle check">&#10004;</span>Submit update to mobile Storefronts <span class="special note4">Mobile</span></li>
                 </ul>
             </section>
             <!-- /today -->
@@ -54,10 +54,10 @@
             <section class="content">
                 <h2><span class="downarrow">&#9660;</span>Upcoming</h2>
                     <ul>
-                        <li><span class= "cross">&#10006;</span>Schedule meeting with Alex</li>
-                        <li><span class= "check">&#10004;</span>Homepage refresh <span class="special-note5">website</span></li>
-                        <li><span class= "check">&#10004;</span>Onboard new Sales team members <span class="special-note6">Sales</span></li>
-                        <li><span class= "check">&#10004;</span>Review Editorial Calendar <span class="special-note1">Editorial</span></li>
+                        <li><span class= "circle cross">&#10006;</span>Schedule meeting with Alex</li>
+                        <li><span class= "circle check">&#10004;</span>Homepage refresh <span class="special note5">website</span></li>
+                        <li><span class= "circle check">&#10004;</span>Onboard new Sales team members <span class="special note6">Sales</span></li>
+                        <li><span class= "circle check">&#10004;</span>Review Editorial Calendar <span class="special note1">Editorial</span></li>
                     </ul>
             </section>
         <!-- /upcoming -->
